src/objects/Address__c.object
<CustomObject>
    <description>Transversal Object used to store data of different types of addresses.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Roles_Billing__c</fullName>
        <description>Count the number of address role where the type is Billing.</description>
        <label>Count_Roles_Billing</label>
        <summaryFilterItems>
            <field>Address_Role__c.Role_Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </summaryFilterItems>
        <summaryForeignKey>Address_Role__c.Address__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Roles_Business__c</fullName>
        <description>Count the number of address role where the type is Business.</description>
        <label>Count_Roles_Business</label>
        <summaryFilterItems>
            <field>Address_Role__c.Role_Type__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Address_Role__c.Address__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Roles_Shipping__c</fullName>
        <description>Count the number of address role where the type is Shipping.</description>
        <label>Count_Roles_Shipping</label>
        <summaryFilterItems>
            <field>Address_Role__c.Role_Type__c</field>
            <operation>equals</operation>
            <value>Shipping</value>
        </summaryFilterItems>
        <summaryForeignKey>Address_Role__c.Address__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Geo_Coordinates__c</fullName>
        <label>Geo-Coordinates</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Populated by a workflow rule when the Country Reference is changed.</description>
        <inlineHelpText>Populated by a workflow rule when the Country Reference is changed.</inlineHelpText>
        <label>Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Business_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Business Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Box_Address__c</fullName>
        <description>check if address is PO Box</description>
        <inlineHelpText>check if address is PO Box</inlineHelpText>
        <label>PO Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechUpdate_AddressFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to bypass VR when update is done by addresscreation flow</description>
        <label>Tech Update Address Flow</label>
        <type>Checkbox</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Address-{00000000}</displayFormat>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>MASTER</fullName>
        <active>true</active>
        <label>MASTER</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AirportOneRoleShipTo</fullName>
        <active>true</active>
        <description>airport can have only one shipping role per address</description>
        <errorConditionFormula>and( Count_Roles_Shipping__c &gt;1,
 Account__r.RecordTypeDeveloperName__c =&quot;Airport&quot;)</errorConditionFormula>
        <errorMessage>airport can have only one shipping role per address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BranchAccount_cant_create_AnotherAddress</fullName>
        <active>true</active>
        <description>Branch account can not create another address than the main address.</description>
        <errorConditionFormula>AND( 
     ISPICKVAL( Account__r.Hierarchy_Level__c ,&apos;Branch&apos;),
     (Is_Business_Address__c =False)
)</errorConditionFormula>
        <errorMessage>For Branch account you can&apos;t create another address than the main address (Business address).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BusinessAddressModification</fullName>
        <active>true</active>
        <description>The Main Address must be edit only on Account</description>
        <errorConditionFormula>AND(
    ( TechUpdate_AddressFlow__c =FALSE),
    (Is_Business_Address__c =TRUE),
    or(ISCHANGED( Street__c),
       ISCHANGED( Postal_Code__c ),
       ISCHANGED( City_Name__c ),
       ISCHANGED( IATA_ISO_Country__c ),
       ISCHANGED( State_Name__c ),
       ISCHANGED( Geo_Coordinates__Latitude__s ),
       ISCHANGED( Geo_Coordinates__Longitude__s )
    )
)</errorConditionFormula>
        <errorMessage>Modification of business account fields needs to be done on the related account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OneRoleBilling</fullName>
        <active>true</active>
        <description>Only one Billing role per address is allowed</description>
        <errorConditionFormula>Count_Roles_Billing__c &gt;1</errorConditionFormula>
        <errorMessage>Only one Billing role per address is allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OneRoleBusiness</fullName>
        <active>true</active>
        <description>Only one Business role per address is allowed</description>
        <errorConditionFormula>Count_Roles_Business__c &gt;1</errorConditionFormula>
        <errorMessage>Only one Business role per address is allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OneRoleShipping</fullName>
        <active>true</active>
        <description>Only one Shipping role per address is allowed</description>
        <errorConditionFormula>Count_Roles_Shipping__c &gt;1</errorConditionFormula>
        <errorMessage>Only one Shipping role per address is allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Street_POnumber</fullName>
        <active>true</active>
        <description>You can not fill Street and PO Number fields at the same time</description>
        <errorConditionFormula>AND(
 Is_Business_Address__c =false,
NOT(ISBLANK(Street__c)),
NOT(ISBLANK(PO_Box_Address__c))
)</errorConditionFormula>
        <errorMessage>You can not fill Street and PO Number fields at the same time</errorMessage>
    </validationRules>
</CustomObject>